mario/3app/hnginx.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-h
  namespace: 3app
spec:
  selector:
    app: hnginx
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: h-dep
  namespace: 3app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hnginx
  template:
    metadata:
      name: h-pod
      labels:
        app: hnginx
    spec:
      containers:
      - name: h-con
        image: 61.254.18.30:5000/hnginx:latest
