mario/3app/spring.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-spring
  namespace: 3app
spec:
  selector:
    app: spring
  ports:
  - port: 80
    targetPort: 8085
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-dep
  namespace: 3app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring
  template:
    metadata:
      name: spring-pod
      labels:
        app: spring
    spec:
      containers:
      - name: spring-con
        image: 61.254.18.30:5000/pcm/spring:1
