mario/3app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: 3app
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-spring
                port:
                  number: 80
          - path: /ip
            pathType: Prefix
            backend:
              service:
                name: svc-ip
                port:
                  number: 80
          - path: /h
            pathType: Prefix
            backend:
              service:
                name: svc-h
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: svc-spring
                port:
                  number: 8085
